[tool.poetry]
name = "pytket-docs"
package-mode = false
version = "0.1.0"
description = ""
authors = ["CalMacCQ <93673602+CalMacCQ@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytket = { extras = ["zx"], version = "^2.2.0" }
pytket-qiskit = "^0.66.0"
pytket-cirq = "^0.41.0"
pytket-qujax = "0.21.0"
pytest = "^8.3.5"
qiskit-algorithms = "^0.3.1"
ipykernel = "^6.29.4"
kahypar = "^1.3.5"
sphinx-copybutton = "^0.5.2"
quimb = "^1.10.0"
openfermion = "^1.7.0"
ipyparallel = "^9.0.1"
furo = "^2024.8.6"
myst-nb = "^1.2.0"
sphinx-autodoc-typehints = "^3.0.1"
enum-tools = { extras = ["sphinx"], version = "^0.13.0" }
sphinxcontrib-googleanalytics = "^0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
